--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=backend
 logging.level.org.springframework=INFO
 server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/imba_calculator
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=futureSQL
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=ERROR
